# mkpub

./: Cargo.toml  README.md  config.toml  program.rhai
.github/: dependabot.yaml
.github/workflows/: check_and_test.yaml  clippy_and_tests.yaml  continuous-integration.yaml  release.yaml
src/: cli.rs  config.rs  error.rs  main.rs  s3.rs  script.rs
