[package]
name = "mkpub"
authors = ["Mikkel Kroman <mk@maero.dk>"]
description = "Heavily opinionated command-line tool for sharing files using S3"
repository = "https://github.com/mkroman/mkpub"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "s3"]
version = "0.2.1"
edition = "2021"
exclude = ["/.github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "0.56.1", default-features = false, features = ["client-hyper", "rustls", "rt-tokio"] }
aws-sdk-s3 = "0.33.0"
clap = { version = "4.4.6", features = ["derive", "env"] }
directories = "5.0.1"
dirs = "5.0.1"
miette = { version = "5.10.0", features = ["fancy"] }
mime_guess = "2.0.4"
rhai = "1.16.2"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
toml = "0.8.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
url = { version = "2.4.1", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
