[package]
name = "mkpub"
authors = ["Mikkel Kroman <mk@maero.dk>"]
description = "Heavily opinionated command-line tool for sharing files using S3"
repository = "https://github.com/mkroman/mkpub"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "s3"]
version = "0.5.0"
edition = "2021"
exclude = ["/.github"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5", default-features = false, features = ["client-hyper", "rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = "1.54"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0.1"
miette = { version = "7.2.0", features = ["fancy"] }
mime_guess = "2.0.5"
rhai = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "macros"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
